# GNU-MyServer-GSoC

misc/Sudoku.Core/: AUTHORS  COPYING  Makefile  Makefile.in  README  autogen.sh  config.h  config.status  configure  configure.ac
misc/control/: Makefile.am  control_client.cpp  control_client.h  fltkconfig.cpp  language.cpp  mimetype.cpp  myserver-configure.cpp  progress.cpp  service.cpp  vector.cpp  vector.h  vhost.cpp
myserver/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  SConstruct  THANKS  TODO  autogen.sh  bootstrap  bootstrap.conf  config.sub  configure.ac  configure.in  doxygen  generate_myserver_dev.pl  ltmain.sh  myserver.dev  myserver.h  stdafx.cpp  stdafx.h  version  version.h.in
myserver/binaries/: MIMEtypes.default.xml  MIMEtypes.xml.default  MIMEtypes.xml.unix.default  MIMEtypes.xsd  Makefile.am  NSIS installer script.nsi  clean_copy  clean_copy.sh  license.txt  myserver-daemon  myserver.default.windows.xml  myserver.default.xml  myserver.xml.default  myserver.xml.unix.default  readme.txt  virtualhosts.default.xml  virtualhosts.xml.default  virtualhosts.xml.unix.default  virtualhosts.xsd
myserver/build-aux/: config.guess  config.rpath  config.sub  depcomp  install-sh  link-warning.h  mdate-sh  missing  texinfo.tex
myserver/cgi-lib/: Makefile.am  cgi-lib.dev  cgi_manager.cpp  cgi_manager.h
myserver/contrib/: Makefile.am
myserver/control/: Makefile.am  MyServer Configure.dev  bless.patch  control_client.cpp  control_client.h  fltkconfig.cpp  fltkconfig.fd  fltkconfig.h  language.cpp  language.h  main.cpp  mimetype.cpp  mimetype.h  myserver-configure.cpp  progress.cpp  progress.h  service.cpp  service.h  textmangler.cpp  vector.cpp  vector.h  vhost.cpp  vhost.h
myserver/documentation/: Makefile.am  basic_configuration.texi  directory_listing.texi  doclicense.texi  error_pages.texi  general_description.texi  log_management.texi  mime_types.texi  myserver.texi  process_security.texi  security.texi  ssl_certificates.texi  virtual_hosts.texi  webdav.texi
myserver/include/: Makefile.am  cached_file.h  cached_file_buffer.h  cached_file_factory.h  cgi.h  cgi_manager.h  clients_thread.h  connection.h  connections_scheduler.h  control_errors.h  control_header.h  control_protocol.h  dyn_executor_manager.h  dyn_filter.h  dyn_filter_file.h  dyn_filters_manager.h  dyn_http_command.h  dyn_http_command_manager.h  dyn_http_manager.h  dyn_http_manager_list.h  dynamic_executor.h  dynamic_protocol.h  dynamiclib.h  env.h  event.h  fastcgi.h  file.h  files_utility.h  filter.h  filters_chain.h  filters_factory.h  find_data.h  ftp.h  ftp_common.h  ftp_lexer.h  ftp_parser.h  generic_plugins_manager.h  gzip.h  gzip_decompress.h  hash_map.h  (+62 more)
myserver/lib/: Makefile.am
myserver/m4/: cppunit.m4  gnome-pthread-check.m4  libpng.m4  nls.m4  po.m4  python.m4  python_mod.m4
myserver/po/: ChangeLog  Makefile.in.in  Makevars  Makevars.template  POTFILES.in
myserver/source/: Dev-C++.cpp  Makefile.am  cached_file.cpp  cached_file_buffer.cpp  cached_file_factory.cpp  cgi.cpp  cgi_manager.cpp  clients_thread.cpp  connection.cpp  connections_scheduler.cpp  control_header.cpp  control_protocol.cpp  dyn_executor_manager.cpp  dyn_filter.cpp  dyn_filter_file.cpp  dyn_filters_manager.cpp  dyn_http_command.cpp  dyn_http_command_manager.cpp  dyn_http_manager.cpp  dyn_http_manager_list.cpp  dynamic_executor.cpp  dynamic_protocol.cpp  dynamiclib.cpp  event.cpp  fastcgi.cpp  file.cpp  files_utility.cpp  filter.cpp  filters_chain.cpp  filters_factory.cpp  find_data.cpp  ftp.cpp  ftp_lexer.cpp  ftp_lexer.lpp  ftp_parser.cpp  ftp_parser.ypp  generic_plugins_manager.cpp  gzip.cpp  gzip_decompress.cpp  hash_map.cpp  (+61 more)
myserver/src/: Makefile.am  cached_file.cpp  cached_file_buffer.cpp  cached_file_factory.cpp  cgi.cpp  clients_thread.cpp  connection.cpp  connections_scheduler.cpp  control_header.cpp  control_protocol.cpp  dyn_executor_manager.cpp  dyn_filter.cpp  dyn_filter_file.cpp  dyn_filters_manager.cpp  dyn_http_command.cpp  dyn_http_command_manager.cpp  dyn_http_manager.cpp  dyn_http_manager_list.cpp  dynamic_executor.cpp  dynamic_protocol.cpp  dynamiclib.cpp  env.cpp  event.cpp  fastcgi.cpp  file.cpp  files_utility.cpp  filter.cpp  filters_chain.cpp  filters_factory.cpp  find_data.cpp  ftp.cpp  ftp_parser.ypp  generic_plugins_manager.cpp  gzip.cpp  gzip_decompress.cpp  hash_map.cpp  home_dir.cpp  http.cpp  http_data_handler.cpp  http_data_read.cpp  (+53 more)
myserver/tests/: Makefile.am  main.cpp  memory_socket.h  test_auth_domain.cpp  test_auth_method.cpp  test_base64.cpp  test_bitvec.cpp  test_cached_file.cpp  test_cached_file_buffer.cpp  test_cached_file_factory.cpp  test_connection.cpp  test_connections_scheduler.cpp  test_crypt_algo_manager.cpp  test_exceptions.cpp  test_file.cpp  test_file_stream.cpp  test_file_stream_creator.cpp  test_files_utility.cpp  test_filter_chain.cpp  test_fork_server.cpp  test_ftp.cpp  test_gopher_content.cpp  test_gzip.cpp  test_hashmap.cpp  test_homedir.cpp  test_http_req_security_domain.cpp  test_http_request.cpp  test_http_response.cpp  test_ip.cpp  test_log_manager.cpp  test_log_stream_factory.cpp  test_md5.cpp  test_mem_buff.cpp  test_mem_socket.cpp  test_mem_stream.cpp  test_membuf_file.cpp  test_mime_manager.cpp  test_multicast.cpp  test_mutex.cpp  test_nodetree.cpp  (+28 more)
myserverweb/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  authors  autogen.sh  config.guess  config.h  config.h.in  configure.in  depcomp  doxygen  ltmain.sh  missing  myserver.dev  myserver.dsp  myserver.dsw  myserver.rc  myserver.sln  myserver.vcproj  news  resource.h  stdafx.cpp  stdafx.h
myserverweb/CGI-LIB/: CGI-LIB.vcproj  Makefile  Makefile.am  Makefile.in  cgi-lib.dev  cgi_manager.cpp  cgi_manager.h  stdafx.cpp  stdafx.h
myserverweb/Documentation/: Makefile.in  MyServer.hhp  MyServer1.chm  Table of Contents.hhc
myserverweb/binaries/: MIMEtypes.txt  MIMEtypes.txt.linux  MIMEtypes.xml  MIMEtypes.xml.default  Makefile.am  Makefile.in  NSIS installer script.nsi  REGISTER SERVICE.bat  START CONSOLE.bat  clean_copy  (+16 more)
(+1701 files in other folders)
